https://trello.com/c/2EJWtz2i/232-fix-graph-and-scene-viewer-css-rules-so-that-the-scene-is-fully-visible

--- a/src/css/viewer.css
+++ b/src/css/viewer.css
@@ -9,7 +9,14 @@ html, body {
 .layout-border{
     border:white solid 1px;
 }
-#main, .player, .scene-listener, .login-loader, .media-object-wrapper {
+.scene-listener{
+    flex:1 1 auto;
+}
+.mf-graph-viewer{
+    flex:1 1 auto;
+    display: flex;
+}
+#main, .player, .login-loader, .media-object-wrapper {
     height: 100%;
 }
 
